--- a/notebooks/Problem 001.ipynb
+++ b/notebooks/Problem 001.ipynb
@@ -44,42 +44,103 @@
    "metadata": {}
   },
   {
+   "source": [
+    "print(sum([x for x in range(1, 1000) if (not x % 3) or (not x % 5)]))\n"
+   ],
    "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
+   "execution_count": 21,
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "233168"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 16
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "233168\n"
+     ]
     }
-   ],
-   "source": [
-    "sum([x for x in range(1, 1000) if (not x % 3) or (not x % 5)])"
    ]
   },
   {
    "source": [
-    "When using FOR loops one would have to be careful not to double count numbers that are nultiples of both 3 and 5 (numbers such as 15, 30, etc...). This could be handled by filling separate lists for multiples of 3 and 5 respectively, casting them as sets, and performing a union on them before summing.\n",
+    "This builds our list of multiples from scratch using a FOR loop, and then sums the terms in the list for the correct answer.\n",
     "\n",
-    "We will see that loops are completely unneccesary. They are, in fact, extreemly inefficient. There is a closed form solution available that can be found via arithmetic progression.\n",
+    "We will see that loops are inefficient at solving this problem. Instead there is a closed form solution available that can be found via arithmetic progression. \n",
     "\n",
     "https://en.wikipedia.org/wiki/Arithmetic_progression\n",
     "\n",
-    "We can adapt the formula for the sum of an arithmetic series to this problem to get a solution in constant time O(1). The formula is as follows:\n",
+    "An arithmetic progression is a series of numbers with constant difference between adjacent terms. We can use the fact that lists of multiples are arithmetic progressions as a shortcut to looping in our problem.\n",
+    "\n",
+    "The formula for the sum of an arithmetic progression is as follows:\n",
     "\n",
     "$$\\frac {n(a_{1}+a_{n})}{2}$$\n",
     "\n",
+    "Where n is the number of terms in our progression, and a</sub>1</sub> and a</sub>n</sub> are the first and last term respectively. We can adapt this formula to our problem to get a solution in constant time O(1). This also allows us to scale the solution to an arbitrarily sized input. This may not be terribly helpful in this case, but we may see the technique come in handy in future problems.\n",
     "\n",
-    "\n"
+    "Our inputs must be carefully considered to get the correct answer. The problem asks for multiples below 1000. We will need to add together the first 333 multiples of 3 (between 3 and 999) to the first 199 multiples of 5 (between 5 and 995). Some clever mathematical intuition is required here, however. We must recognize that our sum using arithmetic progressions double counts the numbers that are multiples of both 3 and 5. We must then subtract the 66 multiples of 15 between 15 and 990 to perfectly compensate for this overlap.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "233168.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Arithmetic progression sum formula with the above inputs and some algebraic simplification\n",
+    "print((333*(3+999)+199*(5+995)-66*(15+990))/2)"
+   ]
+  },
+  {
+   "source": [
+    "We can see that implementing the closed form solution is much faster than one involving loops."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "68.1 µs ± 108 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum([x for x in range(1, 1000) if (not x % 3) or (not x % 5)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6.23 ns ± 0.0157 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit (333*(3+999)+199*(5+995)-66*(15+990))/2"
+   ]
   },
   {
    "cell_type": "code",
