--- a/notebooks/Problem 001.ipynb
+++ b/notebooks/Problem 001.ipynb
@@ -108,38 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "68.1 µs ± 108 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit sum([x for x in range(1, 1000) if (not x % 3) or (not x % 5)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "6.23 ns ± 0.0157 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n"
+      "The closed form solution is about  1612 times faster.\n"
      ]
     }
    ],
    "source": [
-    "%timeit (333*(3+999)+199*(5+995)-66*(15+990))/2"
+    "from time import time\n",
+    "\n",
+    "iter = 50000\n",
+    "\n",
+    "timer = time()\n",
+    "for _ in range(iter):\n",
+    "    sum([x for x in range(1, 1000) if (not x % 3) or (not x % 5)])\n",
+    "time1 = time() - timer\n",
+    "\n",
+    "timer = time()\n",
+    "for _ in range(iter):\n",
+    "    333*(3+999)+199*(5+995)-66*(15+990)/2\n",
+    "time2 = time() - timer\n",
+    "\n",
+    "print('The closed form solution is about ', int(time1 / time2), 'times faster.')"
    ]
   }
  ]
