--- a/notebooks/Problem 002.ipynb
+++ b/notebooks/Problem 002.ipynb
@@ -10,9 +10,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.9.0-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3",
+   "language": "python"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -33,11 +38,48 @@
    "metadata": {}
   },
   {
+   "source": [
+    "Problem 2 introduces us to the fabled Fibonacci sequence.  \n",
+    "https://en.wikipedia.org/wiki/Fibonacci_number  \n",
+    "For our purposes the sequence starts with 1, 2. Subsequent terms consist of the sum of the previous 2 terms.  \n",
+    "Our program will consist of two parts. We will build the list of Fibonacci numbers that do not exceed 3 million. Then we will filter out and sum all the even values.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4613732\n"
+     ]
+    }
+   ],
+   "source": [
+    "fibolist = [1, 2]\n",
+    "max_value = 4 * 10 ** 6\n",
+    "\n",
+    "current = sum(fibolist[-2:])\n",
+    "while current < max_value:\n",
+    "    fibolist.append(current)\n",
+    "    current = sum(fibolist[-2:])\n",
+    "\n",
+    "print(sum([x for x in fibolist if not x % 2]))"
+   ]
+  },
+  {
+   "source": [
+    "Starting with a list of the first Fibonacci numbers given in the problem description we then use list slices ro nake the appropriate sum. The \\[-2:\\] part of the code selects the last two elements of fibolist. The loop adds the sum of these elements to the end of the list and repeats until it finds a value greater then our maximum value.\n",
+    "\n",
+    "The problem asks for the sum of the even values. So the last line of our code uses a comprehesion to add them all up."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
