--- a/notebooks/Problem 001.ipynb
+++ b/notebooks/Problem 001.ipynb
@@ -136,6 +136,13 @@
     "\n",
     "print('The closed form solution is about ', int(time1 / time2), 'times faster.')"
    ]
+  },
+  {
+   "source": [
+    "Even on this modest sized dataset the efficiency increase is impressive, but the real power is in the scaling. No matter how large the numbers you feed the formula it will take roughly the same time to calulate the sum. While the looping method must iterate longer and longer to manage ever larger inputs."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
