--- a/notebooks/Problem 006.ipynb
+++ b/notebooks/Problem 006.ipynb
@@ -10,9 +10,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.9.0-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3",
+   "language": "python"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -36,10 +41,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "25164150\n"
+     ]
+    }
+   ],
+   "source": [
+    "nat_100 = [x for x in range(1, 101)]\n",
+    "sqr_100 = [x ** 2 for x in nat_100]\n",
+    "print(sum(nat_100) ** 2 - sum(sqr_100))"
+   ]
   }
  ]
 }
